--- a/index.html
+++ b/index.html
@@ -9,21 +9,16 @@
             image-rendering: pixelated;
             image-rendering: crisp-edges;
             background: white;
-            border: 1px solid black
         }
         body {
             display: flex;
             justify-content: center;
         }
     </style>
-    <script type="text/javascript" src="./assetmanager.js"></script>
-    <script type="text/javascript" src="./timer.js"></script>
-    <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./util.js"></script>
-    <script type="text/javascript" src="./animator.js"></script>
-    <script type="text/javascript" src="./main.js"></script>
+    <script type="module" src="./main.js"></script>
 </head>
 <body>
-    <canvas id="gameWorld" width="1024" height="768" tabindex="0" autofocus></canvas>
+    <canvas id="gameWorld" width="768" height="768" tabindex="0" autofocus></canvas>
 </body>
 </html>
